# thinkstrip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_stream.py
src/thinkstrip/: __init__.py  _batch.py  _stripper.py
tests/: test_batch.py  test_import.py  test_properties.py  test_stripper.py
