[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkstrip"
version = "0.2.0"
description = "Think-block filter for LLM streams"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Informity", email = "contact@informity.com" }
]
keywords = [
  "llm",
  "reasoning-models",
  "streaming",
  "text-processing",
  "qwen",
  "deepseek",
  "token-stream",
  "think-tags",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Filters",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage      = "https://github.com/informity/thinkstrip"
"Bug Tracker" = "https://github.com/informity/thinkstrip/issues"
Changelog     = "https://github.com/informity/thinkstrip/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.0,<2",
  "hypothesis>=6.0,<7",
  "mypy>=1.0,<2",
  "pytest>=7.0,<10",
  "pytest-cov>=4.0,<8",
  "ruff>=0.1,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thinkstrip = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts    = "-q"
testpaths  = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version       = "3.13"
strict               = false
warn_unused_ignores  = true
warn_redundant_casts = true
warn_return_any      = false
